Arreglado el tema bordes

--- a/RobotWar.html
+++ b/RobotWar.html
@@ -4173,6 +4173,14 @@ $(document).ready(function(){
 			<span id="computerLife"></span>
 		</div>
 	</div>
+	<div id="leftSideCourt">
+	</div>
+	<div id="topSideCourt">
+	</div>
+	<div id="rightSideCourt">
+	</div>
+	<div id="bottomSideCourt">
+	</div>
 	<div id="court">		
 	</div>	
 </body> 
